<resources>
    <string name="app_name">TabLayoutDemo</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1_fragment">Tab 1 Fragment</string>
    <string name="tab_2_fragment">Tab 2 Fragment</string>
    <string name="tab_3_fragment">Tab 3 Fragment</string>
    <string name="tab_4_fragment">Tab 4 Fragment</string>
    <string name="fahrenheit_converter">Fahrenheit Converter</string>
    <string name="kilometers_to_miles">Kilometers to Miles</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="button">Button</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celcius">Celcius</string>
    <string name="convert">Convert</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="convert_distance">Convert Distance</string>
    <string name="tip">Tip %</string>
    <string name="party_size">Party Size</string>
    <string name="amount">Amount</string>
    <string name="calculate">Calculate</string>
</resources>
